# mcts

./: .gitignore  README.md  ai.js  app.css  app.js  board.css  board.js  delayeval.js  game.js  gametree.js  index.html  main.js  mcts.js  othello.js  test.html  ui.js  utils.js
cpp/: CMakeLists.txt  GameState.hpp  Node.cpp  Node.hpp  build.sh  fixed_random.hpp  gamenode.cpp  gamenode.hpp  gametree.cpp  gametree.hpp  mcts.cpp  mcts.hpp  mcts_wasm.js  mcts_wasm.wasm  move.hpp  node.cpp  node.hpp  othellostate.hpp  uct.cpp  uct.hpp  uct_wasm.js  uct_wasm.wasm
css/: app.css
js/: ai.js  app.js  board.js  gametree.js  main.js  mcts.js  mcts_old.js  mcts_test.js  mcts_wasm.js  othello.js  pmc.js  uct_wasm.js  ui.js  utils.js
